# JirachiAdvancer

./: CMakeLists.txt  appveyor.yml  main.cpp  version.h.in
.ci/: after_build.sh
